<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@raw/bg_registration" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rect_rounded_white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TextView
            android:id="@+id/textView4"
            style="@style/text_title"
            android:layout_marginBottom="@dimen/padding_lg"
            android:text="@string/signin" />

        <EditText
            android:id="@+id/et_login"
            style="@style/et_default"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/et_pass"
            style="@style/et_default"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_default"
            android:layout_marginBottom="@dimen/padding_lg"
            android:text="@string/signin" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_md"
            android:text="@string/txt_no_accaunt"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_registration"
            style="@style/btn_default.bordered"
            android:text="@string/registration" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/text_title.white"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/subtitle"
            android:text="@string/app_desc" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>